--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@ background-color: #ffffff;
 .reason-content-list {
   list-style: none;
 } /*отменяем дефолтные  стили списка*/
-.main-title .main-title-image {
+.main-title-image {
 	background-image: url("img/intro-welcome.svg");
 }
 .about-title-slogan {
@@ -60,6 +60,10 @@ background-color: #ffffff;
 .reason-content-item-title {
   font-size: 21px;
   line-height: 21px;
+}
+/*Убираем видимую рамку для формы*/
+.order-form {
+	border: none;
 }
 .order-question-title {
 	font-size: 30px;
@@ -105,7 +109,7 @@ line-height: 26px;
 color: #000000;
 font-weight: 700;
 text-align: left;
-background-color: #f2f2f2;	
+background-color: #f2f2f2;
 }
 /*Оформляем текст в форме при фокусировке*/
 .order-text:hover {
