--- a/css/catalog.css
+++ b/css/catalog.css
@@ -13,6 +13,14 @@ body {
 	background-position: top center;
   background-repeat: no-repeat;
 }
+.inner-page {
+  color: #000000;
+	background-image: url("img/filter-background.jpg");
+  background-color: #ffffff;
+  background-position: 50% 50%;
+  background-repeat: repeat;
+}
+
 a {
   text-decoration: none;
 }
@@ -28,10 +36,20 @@ a {
   color:  #000000;
 }
 /*Почему-то свойство не срабатывает*/
+a .hotel-current {
+	color: #cacaca;
+}
+
 .header-navigation-info {
 	color: #000000;
+	background-color: #ffffff;
 	text-decoration: none;
 }
+a .header-navigation {
+list-style: none;
+}
+
+/*Цвет пока тоже не меняется при наведении*/
 .header-navigation-info a:hover {
   color: #81b3d2;
 	text-decoration: none;
@@ -87,6 +105,7 @@ text-decoration-color: 81b3d2;
 .catalog-item-img {
 	text-align: left;
 }
+/*Свойство добавила, а заголовок не меняется в цвете при нажатии*/
 .catalog-item-title {
 	font-size: 21px;
   line-height: 26px;
@@ -98,7 +117,7 @@ text-decoration-color: 81b3d2;
 color: #81b3d2;
 }
 .catalog-item-title:focus {
-color: #cacaca;;
+color: #cacaca;
 }
 .catalog-item-type,
 .catalog-item-price {
@@ -182,7 +201,7 @@ text-decoration: none;
 	font-weight: 400;
   color: #000000;
 }
-/*Не меняется цвет лого при фокусу*/
+/*Не меняется цвет лого при фокусe*/
 a .footer-logo {
 color: #000000;
 text-align: right;
