--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,8 @@ a {
   background-color: #81b3d2;
   color: #fff;
   text-align: center;
-  width:400px;
-  height:256px;
+  width: 400px;
+  height: 256px;
 }
 
 .reason-content-list {
@@ -82,8 +82,8 @@ a {
 }
 
 .reason-item-white {
-  width:400px;
-  height:256px;
+  width: 400px;
+  height: 256px;
   text-align: center;
 }
 
@@ -104,7 +104,7 @@ a {
   color: #fff;
   vertical-align: middle;
   text-transform: uppercase;
-  border:none;
+  border: none;
   background-color: #766357;
 }
 
@@ -330,13 +330,12 @@ a {
   color: #ffffff;
 }
 
-/*В этом случае не меняется цвет кнопки "Подробнее", в то время, как такая же кнопка "Забронировать" изменяется в цвете при наведении*/
-.catalog-button-detail:hover {
+.catalog-item-button-detail:hover {
   background-color: #669ec0;
   color: #ffffff;
 }
 
-.catalog-button-detail:active {
+.catalog-item-button-detail:active {
   background-color: #5496bd;
   color: #85b0cd;
 }
