--- a/css/style.css
+++ b/css/style.css
@@ -8,27 +8,69 @@ body {
   background-color: #f2f2f2;
 }
 
+.main-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1200px;
+  margin: 0;
+  padding: 0;
+  /* Временно для сетки */
+  min-height: 53px;
+}
+
+.wrapper {
+  width: 1200px;
+  padding-left: 73px;
+  padding-right: 73px;
+  margin: 0 auto;
+  background-color: #fff;
+}
+
+.main-navigation {
+  position: relative;
+}
+
 a {
   text-decoration: none;
 }
 
-.wrapper {
-  background-color: #fff;
-  width: 1200px;
-  margin: 0 auto;
-}
-
 .main-header-logo {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  margin-left: -69px;
+  margin-bottom: 0px;
+  width: 138px;
+  height: 71px;
 }
 
 .main-header-logo img {
-  display:block;
 }
 
 .header-navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1200px;
+  margin: 0;
+  padding: 0;
   list-style: none;
   font-weight: 700;
 }
+
+.header-navigation li {
+  display: flex;
+  align-items: center;
+  width: 250px;
+  min-height: 56px;
+}
+
+.header-navigation li:nth-child(3),
+.header-navigation li:nth-child(4) {
+  justify-content: flex-end;
+}
+
 
 .header-navigation a {
   color: #000;
@@ -46,8 +88,27 @@ a {
   color: #766357;
 }
 
+.main-navigation-wrapper .container {
+  display: flex;
+  justify-content: space-around;
+}
+
 .main-title {
+  width: 1200px;
   background: #dceaf3 url("../img/background-photo.jpg") no-repeat center;
+  /* Временно для сетки */
+  min-height: 508px;
+}
+
+.about {
+display: block;
+width: 1200px;
+/* Временно для сетки */
+height: 274px;
+}
+
+.box-title {
+width: 490px;
 }
 
 .about-title-slogan {
@@ -94,6 +155,12 @@ a {
 }
 
 .order-question {
+  width: 1200px;
+}
+
+  .order-question .container {
+  width: 576px;
+  height: 236px;
   text-align: center;
 }
 
@@ -117,7 +184,12 @@ a {
   color: #928a85;
 }
 
+.order-container {
+  width: 1200px;
+}
+
 .order-form {
+  width: 576px;
   text-align: center;
 }
 
@@ -178,89 +250,83 @@ a {
 }
 
 .main-footer {
+  width: 1200px;
+  padding: 36px 0;
   background-color: #fff;
-}
-
-.footer-text {
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: 700;
-  text-decoration: none;
-}
-
-.footer-phone a {
-  color: #000;
-}
-
-.footer-social {
-  text-align: center;
-  list-style: none;
-}
-
-.social-button {
-  background-color: #81b3d2;
-}
-
-.social-button:hover {
-  background-color: #669ec0;
-}
-
-.social-button:focus {
-  background-color: #5496bd;
 }
 /* Стили каталога*/
 .filter {
-  background: #dceaf3 url("../img/filter-background.jpg") no-repeat center;
+ background: #dceaf3 url("../img/filter-background.jpg") no-repeat center;
 }
 
 .filter-form fieldset {
-  border: none;
+ border: none;
 }
 
 .filter-form legend {
-  font-size: 16px;
-  line-height: 21px;
-  text-align: center;
+ font-size: 16px;
+ line-height: 21px;
+ text-align: center;
 }
 
 .filter-title {
-  color: #fff;
-  text-align: center;
+ color: #fff;
+ text-align: center;
 }
 
 .filter-form ul {
-  list-style: none;
-  line-height: 31px;
-  color: #fff;
+ list-style: none;
+ line-height: 31px;
+ color: #fff;
 }
 
 .filter-button {
-  background-color: transparent;
-  text-align: center;
-  color: #fff;
-  vertical-align: middle;
-  text-transform: uppercase;
-  border: 1px solid #fff;
+ background-color: transparent;
+ text-align: center;
+ color: #fff;
+ vertical-align: middle;
+ text-transform: uppercase;
+ border: 1px solid #fff;
 }
 
 .filter-button:hover {
-  background-color: #fff;
-  color: #000;
+ background-color: #fff;
+ color: #000;
+}
+
+.container-result {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1056px;
+  min-height: 86px;
+}
+
+.result {
+  width: 1056px;
+  min-height: 86px;
+  margin: 0 auto;
+  padding-left: 73px;
 }
 
 .result-count {
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: 700;
-  border: 1px solid #fff;
+ font-size: 21px;
+ line-height: 26px;
+ font-weight: 700;
+ border: 1px solid #fff;
+ margin-left: 73px auto;
 }
 
 .result-sort {
   font-size: 12px;
   line-height: 18px;
+  margin-left: 52px;
 }
 
 .sort-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   font-size: 12px;
   line-height: 18px;
   list-style: none;
@@ -270,89 +336,93 @@ a {
   color: #81b3d2;
 }
 
+.item-icon a {
+  margin-left: 73;
+}
+
 .sort-item-dotted a {
-  color: #cacaca;
-  border-bottom: 1px dotted #81b3d2;
+ color: #cacaca;
+ border-bottom: 1px dotted #81b3d2;
 }
 
 .sort-item-dotted a:hover {
-  color: #81b3d2;
+ color: #81b3d2;
 }
 
 .sort-item-dotted a:active {
-  color: #000;
+ color: #000;
 }
 
 .sort-item-icon {
 }
 
 .catalog-list {
-  list-style: none;
+ list-style: none;
 }
 
 .catalog-item-block {
-  background-color: #fff;
-  text-align: center;
+ background-color: #fff;
+ text-align: center;
 }
 
 .catalog-item-title {
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: 700;
+ font-size: 21px;
+ line-height: 26px;
+ font-weight: 700;
 }
 
 .catalog-item-title:hover {
-  color: #81b3d2;
+ color: #81b3d2;
 }
 
 .catalog-item-title:active {
-  color: #cacaca;
+ color: #cacaca;
 }
 
 .catalog-item-type {
-  color: #333333;
+ color: #333333;
 }
 
 .catalog-item-price {
-  color: #333333;
+ color: #333333;
 }
 
 .catalog-item-button {
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 400;
+ font-size: 14px;
+ line-height: 21px;
+ font-weight: 400;
 }
 
 .catalog-item-button-detail {
-  background-color: #81b3d2;
-  vertical-align: middle;
-  border: none;
-  color: #ffffff;
+ background-color: #81b3d2;
+ vertical-align: middle;
+ border: none;
+ color: #ffffff;
 }
 
 .catalog-item-button-detail:hover {
-  background-color: #669ec0;
-  color: #ffffff;
+ background-color: #669ec0;
+ color: #ffffff;
 }
 
 .catalog-item-button-detail:active {
-  background-color: #5496bd;
-  color: #85b0cd;
+ background-color: #5496bd;
+ color: #85b0cd;
 }
 
 .catalog-item-button {
-  background-color: #766357;
-  color: #ffffff;
-  vertical-align: middle;
-  border: none;
+ background-color: #766357;
+ color: #ffffff;
+ vertical-align: middle;
+ border: none;
 }
 
 .catalog-item-button:hover {
-  background-color: #604e43;
-  color: #ffffff;
+ background-color: #604e43;
+ color: #ffffff;
 }
 
 .catalog-item-button:active {
-  background-color: #503e33;
-  color: #928a85;
+ background-color: #503e33;
+ color: #928a85;
 }
