--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ body {
 }
 
 .main-header {
-  min-height: 53px;
+  min-height: 56px;
+  margin-bottom: 0px;
 }
 
 .wrapper {
@@ -44,26 +45,12 @@ a {
 
 .header-navigation {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   margin: 0;
   padding: 0;
   list-style: none;
   font-weight: 700;
 }
-
-.header-navigation li {
-  display: flex;
-  align-items: center;
-  width: 250px;
-  min-height: 56px;
-}
-
-.header-navigation li:nth-child(3),
-.header-navigation li:nth-child(4) {
-  justify-content: flex-end;
-}
-
 
 .header-navigation a {
   color: #000;
@@ -81,6 +68,18 @@ a {
   color: #766357;
 }
 
+.header-navigation li {
+  display: flex;
+  align-items: center;
+  width: 250px;
+  min-height: 56px;
+}
+
+.header-navigation li:nth-child(3),
+.header-navigation li:nth-child(4) {
+  justify-content: flex-end;
+}
+
 .main-navigation-wrapper .container {
   display: flex;
   justify-content: space-around;
@@ -89,7 +88,11 @@ a {
 .main-title {
   background: #dceaf3 url("../img/background-photo.jpg") no-repeat center;
   /* Временно для сетки */
-  min-height: 57px;
+  min-height: 724px;}
+
+.main-title img {
+  padding-top: 78px;
+  padding-right: 370px;
 }
 
 .about {
@@ -99,18 +102,33 @@ a {
 }
 
 .box-title {
-width: 490px;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  height: 219px;
 }
 
 .about-title-slogan {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height: 50px;
+  width: 442px;
   font-size: 21px;
   line-height: 26px;
   text-align: center;
 }
 
 .about-title-text {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height: 12px;
+  width: 100%;
+  line-height: 26px;
   font-weight: 400;
-  text-align: center;
+  font-size: 14px;
+  margin-bottom: 58px;
 }
 
 .reason-list {
@@ -149,21 +167,54 @@ width: 490px;
   width: 1200px;
 }
 
-  .order-question .container {
-  width: 576px;
-  height: 236px;
-  text-align: center;
+.order-question .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 292px;
 }
 
+.order-question-title {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height: 24px;
+  width: 298px;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 38px;
+}
+
+.order-question-text {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height: 37px;
+  width: 436px;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 55px;
+}
 .order-question-bottom {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height: 88px;
+  width: 575px;
   font-size: 21px;
   line-height: 26px;
+  font-weight: 700;
   text-align: center;
   color: #fff;
   vertical-align: middle;
   text-transform: uppercase;
   border: none;
   background-color: #766357;
+  margin-bottom: 0px;
 }
 
 .order-question-bottom:hover {
@@ -175,8 +226,12 @@ width: 490px;
   color: #928a85;
 }
 
-.order-container {
-  width: 1200px;
+.form-container {
+  display: flex;
+  align-items:center;
+  width:575px;
+  height:480px;
+  margin:0px auto;
 }
 
 .order-form {
@@ -241,13 +296,108 @@ width: 490px;
 }
 
 .main-footer {
-  width: 1200px;
   padding: 36px 0;
   background-color: #fff;
+  margin-left: 74px;
+  margin-right: 74px;
+
+  /* Временно для сетки */
+  min-height: 120px;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  width:1200px;
+  height:120px;
+  padding-left: 52px;
+}
+
+.footer-text .footer-hashtag {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight: bold;
+  height: 18px;
+  width: 136px;
+  font-size: 21px;
+  line-height: 26px;
+  text-align: center;
+}
+
+a .footer-text footer-phone {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight: bold;
+  height: 18px;
+  width: 227px;
+  font-size: 21px;
+  line-height: 26px;
+  text-align: center;
+  color: #000;
+}
+
+.container .footer-social {
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  flex-basis:400px;
+  height:120px;
+  margin: 0px;
+}
+
+.footer-social {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.container .footer-copyright {
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  flex-basis: 400px;
+  height:120px;
+}
+
+.footer-copyright {
+  margin: 0px;
+  padding: 0px;
+
 }
 /* Стили каталога*/
+.visually-hidden {
+  margin: 0;
+}
+
+.filter-columns {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.filter-column1 {
+  width: 156;
+  min-height: 215px;
+}
+
+.filter-column2 {
+  width: 160;
+  min-height: 215px;
+}
+
+.filter-column3 {
+  width: 328;
+  min-height: 215px;
+}
+
 .filter {
  background: #dceaf3 url("../img/filter-background.jpg") no-repeat center;
+ height: 215px;
 }
 
 .filter-form fieldset {
@@ -290,25 +440,43 @@ width: 490px;
   flex-direction: row;
   justify-content: space-between;
   width: 1056px;
-  min-height: 86px;
+  height: 86px;
 }
 
 .result {
   width: 1056px;
   min-height: 86px;
   margin: 0 auto;
-  padding-left: 73px;
+  margin-left: 73px;
+  margin-right: 73px;
 }
 
+.container-result {
+  display:flex;
+  align-items:center;
+  height: 89px;
+  border: 1px solid #e5e5e5;
+
+}
 .result-count {
- font-size: 21px;
- line-height: 26px;
- font-weight: 700;
- border: 1px solid #fff;
- margin-left: 73px auto;
+  display:flex;
+  align-items:center;
+  justify-content: start;
+  width: 115px;
+  height: 24px;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: 700;
+  margin: 0;
+
 }
 
 .result-sort {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  width: 78px;
+  height: 13px;
   font-size: 12px;
   line-height: 18px;
   margin-left: 52px;
@@ -331,29 +499,8 @@ width: 490px;
   margin-left: 73;
 }
 
-.sort-item-dotted a {
- color: #cacaca;
- border-bottom: 1px dotted #81b3d2;
-}
-
-.sort-item-dotted a:hover {
- color: #81b3d2;
-}
-
-.sort-item-dotted a:active {
- color: #000;
-}
-
-.sort-item-icon {
-}
-
-.catalog-list {
- list-style: none;
-}
-
-.catalog-item-block {
- background-color: #fff;
- text-align: center;
+.visually-hidden {
+  margin-top: 0px;
 }
 
 .catalog-item-title {
