--- a/css/style.css
+++ b/css/style.css
@@ -106,13 +106,13 @@ text-align: right;
   margin-top: 40px;
 }
 
-.reason-list {
+.reasons-list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.reasons-item {
+.reason-item {
   display: flex;
 }
 
@@ -124,12 +124,16 @@ text-align: right;
   padding-top: 40px;
   padding-bottom: 40px;
 }
+/*
+.reason-item-gray {
+  background-color: #eeeeee;
+}*/
 
 .reason-item-image {
   width: 800px;
 }
 
-.reason-content-list {
+.reasons-content-list {
   display: flex;
   list-style: none;
   margin: 0;
@@ -183,9 +187,8 @@ text-align: right;
   text-transform: uppercase;
   border: none;
   background-color: #766357;
-  margin: 0;
+  margin: 0 auto;
   display: block;
-  margin-bottom: 0;
 }
 
 .order-question-bottom:hover {
@@ -299,7 +302,7 @@ text-align: right;
 }
 
 .footer-contacts {
-  margin-top: -32px;
+  margin-bottom: 36px;
 }
 
 .footer-hashtag {
@@ -308,12 +311,14 @@ text-align: right;
   font-size: 21px;
   line-height: 26px;
   text-align: center;
+  padding-left: 115px;
 }
 
 .footer-text {
   font-weight: bold;
   font-size: 21px;
   margin: 0;
+  padding-left: 115px;
 }
 
 .footer-phone a {
@@ -322,34 +327,35 @@ text-align: right;
 
 .footer-social {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-basis: 400px;
   list-style: none;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  margin-top: -36px;
+  margin-left: 170px;
 }
 
 .social-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: inline-block;
   width: 48px;
   height: 48px;
   margin-right: 7px;
-  margin-top: -36px;
+  margin-top: 36px;
 }
 
 .social-tw {
-  background: #81b3d2 url("img/twitter.svg") no-repeat;
+  background: #81b3d2 url(../img/twitter.svg) no-repeat;
+  background-position: 50%;
 }
 
 .social-fb {
-  background: #81b3d2 url("img/fb-icon.svg") no-repeat;
+  background: #81b3d2 url(../img/fb-icon.svg) no-repeat;
+  background-position: 50%;
 }
 
 .social-you {
-  background: #81b3d2 url("img/youtube.svg") no-repeat;
+  background: #81b3d2 url(../img/youtube.svg) no-repeat;
+  background-position: 50%;
 }
 
 .footer-copyright {
