--- a/css/style.css
+++ b/css/style.css
@@ -458,10 +458,8 @@ text-align: right;
   min-height: 215px;
 }
 
-.filter {
+.box-filter {
   background: #dceaf3 url("../img/filter-background.jpg") no-repeat center;
-  /*padding-bottom: 30px;
-  padding-top: 65px;*/
 }
 
 .filter-form fieldset {
@@ -477,6 +475,21 @@ text-align: right;
 .filter-list {
   display: flex;
   flex-direction: column;
+}
+
+.filter-column1 {
+  flex-basis: 25%;
+  align-items: flex-start;
+}
+
+.filter-column2 {
+  flex-basis: 25%;
+  align-items: flex-start;
+}
+
+.filter-column3 {
+  flex-basis: 50%;
+  align-items: end;
 }
 
 .filter-title {
@@ -506,29 +519,10 @@ text-align: right;
 
 .container-result {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 1056px;
-  height: 86px;
-}
-
-.result {
-  width: 1056px;
-  min-height: 86px;
-  margin: 0 auto;
-  margin-left: 73px;
-  margin-right: 73px;
-}
-
-.container-result {
-  display: flex;
   align-items: center;
   border-bottom: 1px solid #e5e5e5;
-  padding-top: 32px;
-  padding-bottom: 32px;
   padding-left: 73px;
   padding-right: 73px;
-  box-sizing: border-box;
 }
 
  .result-count {
@@ -547,7 +541,7 @@ text-align: right;
 
 .sort-list {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   flex-basis: 240px;
   list-style: none;
   font-size: 12px;
@@ -562,43 +556,66 @@ text-align: right;
 .sort-item-dotted a {
   margin: 0 auto;
   color: #b1b1b1;
+  text-decoration: underline;
   text-decoration-style: dotted;
 }
 
 .item-icon {
+  margin-left: auto;
+}
+
+.icon-box {
   flex-flow: 1;
   text-align: right;
+  margin-left: auto;
 }
 
 .visually-hidden {
-  margin-top: 0px;
+  margin: 0px;
+}
+
+.catalog-list {
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper-catalog {
+  display: flex;
+  align-items: center;
+
+  /*padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 73px;
+  padding-right: 73px;
+  box-sizing: border-box;*/
 }
 
 .catalog-item {
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  align-items: center;
-  height: 153px;
-  border: 1px solid #e5e5e5;
+  list-style: none;
+}
+
+.catalog-item {
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .catalog-item-block1 {
   width: 135px;
-  height: 92px;
   padding-left: 73px;
 }
 
 .catalog-item-block2 {
-  width: 263px;
-  height: 150px;
-  padding-left: 27px;
+  width: 270px;
+  margin-left: 27px;
+  margin-right: 510px;
 }
 
 .catalog-item-title {
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
+  padding-top: 30px;
+  padding-bottom: 17px;
+  margin: 0;
 }
 
 .catalog-item-title:hover {
@@ -609,7 +626,8 @@ text-align: right;
   color: #cacaca;
 }
 
-.catalog-item-type {
+.catalog-category {
+  margin-right: 60px;
   color: #333333;
 }
 
@@ -617,31 +635,15 @@ text-align: right;
   color: #333333;
 }
 
-.catalog-item-button {
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 400;
-  background-color: #766357;
-  color: #ffffff;
-  vertical-align: middle;
-  border: none;
-}
-
-.catalog-item-button:hover {
-  background-color: #604e43;
-  color: #ffffff;
-}
-
-.catalog-item-button:active {
-  background-color: #503e33;
-  color: #928a85;
-}
-
 .catalog-item-button-detail {
-  background-color: #81b3d2;
   vertical-align: middle;
   border: none;
   color: #ffffff;
+  background-color: #81b3d2;
+  padding-left: 17px;
+  padding-right: 17px;
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
 
 .catalog-item-button-detail:hover {
@@ -654,15 +656,48 @@ text-align: right;
   color: #85b0cd;
 }
 
-.border-rating {
-  background-color: #f2f2f2;
-  padding-left: 16px;
-  padding-right: 13px;
+.catalog-item-button {
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  background-color: #766357;
+  color: #ffffff;
+  vertical-align: middle;
+  border: none;
+  padding-left: 17px;
+  padding-right: 17px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.catalog-item-button:hover {
+  background-color: #604e43;
+  color: #ffffff;
+}
+
+.catalog-item-button:active {
+  background-color: #503e33;
+  color: #928a85;
 }
 
 .catalog-item-block3 {
   width: 112px;
-  height: 155px;
+  padding-right: 73px;
+}
 
-  margin-left: auto;
+.catalog-item-icon {
+  padding-top: 30px;
+  padding-bottom: 43px;
+}
+
+.border-rating {
+  background-color: #f2f2f2;
+  padding-left: 16px;
+  padding-right: 13px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.catalog-item-rating {
+  display: inline-block;
 }
