--- a/css/style.css
+++ b/css/style.css
@@ -91,9 +91,6 @@ text-align: right;
   margin: 0 auto;
 }
 
-.box-title {
-}
-
 .about-title-slogan {
   width: 442px;
   font-size: 21px;
@@ -154,9 +151,6 @@ text-align: right;
   margin: 0;
   margin-bottom: 25px;
 }
-/*
-.reason-item-number-blue {
-}*/
 
 .reason-item-text-blue-1 {
   max-width: 70%;
@@ -180,10 +174,6 @@ text-align: right;
   margin: 0;
   padding: 0;
 }
-/*
-.reason-content-item {
-  width: 33.33%;
-}*/
 
 .reason-item-white {
   background-color: #fff;
@@ -252,8 +242,6 @@ text-align: right;
 }
 
 .order-question-bottom {
-  width: 575px;
-  height: 88px;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
@@ -264,6 +252,10 @@ text-align: right;
   background-color: #766357;
   margin: 0 auto;
   display: block;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 140px;
+  padding-right: 140px;
 }
 
 .order-question-bottom:hover {
@@ -433,10 +425,7 @@ text-align: right;
   display: inline-block;
   vertical-align: middle;
 }
-
-
 /* Стили каталога*/
-
 .filter-columns {
   display: flex;
   justify-content: space-between;
@@ -444,26 +433,33 @@ text-align: right;
 
 .filter-column1 {
   width: 156;
-  min-height: 215px;
-  flex-grow:;
+}
+
+.filter-form legend {
+  font-weight: 700;
 }
 
 .filter-column2 {
   width: 160;
-  min-height: 215px;
 }
 
 .filter-column3 {
   width: 328px;
-  min-height: 215px;
+  text-align: center;
 }
 
 .box-filter {
   background: #dceaf3 url("../img/filter-background.jpg") no-repeat center;
 }
 
+.fieldset {
+  border: none;
+  margin: 0;
+}
+
 .filter-form fieldset {
   border: none;
+  margin: 0;
 }
 
 .filter-form legend {
@@ -475,21 +471,21 @@ text-align: right;
 .filter-list {
   display: flex;
   flex-direction: column;
+  padding: 0;
 }
 
-.filter-column1 {
+.filter-column-1 {
   flex-basis: 25%;
   align-items: flex-start;
 }
 
-.filter-column2 {
+.filter-column-2 {
   flex-basis: 25%;
   align-items: flex-start;
 }
 
-.filter-column3 {
+.filter-column-3 {
   flex-basis: 50%;
-  align-items: end;
 }
 
 .filter-title {
@@ -509,7 +505,14 @@ text-align: right;
   color: #fff;
   vertical-align: middle;
   text-transform: uppercase;
-  border-bottom: 1px solid #fff;
+  border: 2px solid #fff;
+  width: 132px;
+  margin: 0;
+  display: block;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 35px;
+  padding-right: 33px;
 }
 
 .filter-button:hover {
@@ -565,6 +568,7 @@ text-align: right;
 }
 
 .icon-box {
+  display: block;
   flex-flow: 1;
   text-align: right;
   margin-left: auto;
@@ -582,12 +586,8 @@ text-align: right;
 .wrapper-catalog {
   display: flex;
   align-items: center;
-
-  /*padding-top: 30px;
+  padding-top: 30px;
   padding-bottom: 30px;
-  padding-left: 73px;
-  padding-right: 73px;
-  box-sizing: border-box;*/
 }
 
 .catalog-item {
