--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,23 @@ text-align: right;
   padding: 0;
 }
 
+.filter-list li {
+  position: relative;
+  margin: 10px;
+}
+
+.filter-list li::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: -55px;
+  width: 25px;
+  height: 25px;
+  border: 2px solid #fff;
+  background-color: transparent;
+  border-radius: 10%;
+}
+
 .filter-column-1 {
   flex-basis: 25%;
   align-items: flex-start;
@@ -513,6 +530,10 @@ text-align: right;
   padding-bottom: 10px;
   padding-left: 35px;
   padding-right: 33px;
+  position: absolute;
+  right: 260px;
+  top: 220px;
+
 }
 
 .filter-button:hover {
@@ -565,6 +586,11 @@ text-align: right;
 
 .item-icon {
   margin-left: auto;
+
+}
+
+sort-item-icon-1 {
+  margin-right: 6px;
 }
 
 .icon-box {
